2001-06-26  Tambet Ingo  <tambet@ximian.com>

	* xml.pl.in (xst_xml_get_text): ref safe now. Don't return 'ARRAY'
	if it's reference to array, send reference.

2001-06-22  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (parse_modeline): Implement. Doesn't work right yet.

2001-06-21  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (xst_xfree4_conf_get): Added support for "SubSection"s,
	improved readability A LOT, alomst a rewrite.

2001-06-20  Bradford Hovinen  <hovinen@ximian.com>

	* general.pl.in (xst_set_location): remove xst_archive_data

	* xml.pl.in (xst_xml_scan): Don't archive XML data

2001-06-20  Tambet Ingo  <tambet@ximian.com>

	* general.pl.in (xst_init): Use "SET_ME_UP_HARDER" env variable to
	turn on debugging (just like frontends do).

2001-06-19  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_sh_export_bool): Implement.
	  (xst_parse_cap): Implement.
	  (xst_parse_cap_bool): Implement.

	* print.pl.in (xst_print_conf_get): Rewrite.
	  (xst_printcap_read): Eliminate.
	  (xst_print_printers_get): Implement.
	  (xst_print_get_printer_parse_table): Implement.

2001-06-15  Arturo Espinosa Aldama  <arturo@ximian.com>

	* general.pl.in: Deprecated some globals that come now inside a hash
	structure. Those that are in a more general use should be passed to
	this hash in a future "no globals!" crusade.
	(xst_print_usage_synopsis): Prints the synopsis, adding get, set
	and filter functions only if they are present in the directives.
	(xst_print_usage_generic): The more explanatory text, with the
	same rationale as above. Added explanations for the new -i and -d args.
	(xst_print_usage): Simplified. May exit if requested.
	(xst_print_version): Use new hash structure to get info. May exit
	if requested.
	(xst_set_operation): Use new structure.
	(xst_set_with_param): Helper.
	(xst_set_op_directive): Sets the directive, taken from cmd arg.
	(xst_set_prefix): Sets the prefix.
	(xst_set_dist): And the distro.
	(xst_set_location): The location here.