@@ -49,16 +49,11 @@ require "___scriptsdir___/xml.pl";
 require "___scriptsdir___/print.pl";
 
 
-# Debug stuff
-#$xst_prefix = "/tmp/y";
-#open STDERR, ">/tmp/err";
-
 # --- Tool information --- #
 
 $name = "print";
 $version = "0.1.0";
-@platforms = ("redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
-              "mandrake-7.2", "debian-2.2", "debian-woody");
+@platforms = ("redhat-7.0", "redhat-7.1", "debian-2.2");
 
 $description =<<"end_of_description;";
        Configures the lpr subsystem.
@@ -244,11 +239,12 @@ sub filter
 # get, set and filter are special cases that don't need more parameters than a ref to their function.
 # Read general.pl.in:xst_run_directive to know about the format of this hash.
 
-$directives = {
+$directives =
+{
   "get"    => [ \&get,    [], "" ],
   "set"    => [ \&set,    [], "" ],
   "filter" => [ \&filter, [], "" ]
-    };
+};
 
 $tool = &xst_init ($name, $version, $description, $directives, @ARGV);
 &xst_platform_ensure_supported ($tool, @platforms);
